@@ -1,3 +1,13 @@
+2006-03-02  Jakub Jelinek  <jakub@redhat.com>
+
+	* elf/check-textrel.c: Include config.h.
+	(AB(handle_file)): Don't fail if PF_X | PF_W on architectures known
+	to have executable writable PLT.
+	* sysdeps/powerpc/powerpc32/configure.in (HAVE_PPC_SECURE_PLT): New
+	test.
+	* sysdeps/powerpc/powerpc32/configure: Rebuilt.
+	* config.h.in (HAVE_PPC_SECURE_PLT): Add.
+
 2006-01-05  H.J. Lu  <hongjiu.lu@intel.com>
 
 	[BZ #2013]
